feat: #2254: Add Career Assists and Assists for the Team

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -119,11 +119,23 @@ ls.player.warningstatus=Warning status
 ls.player.injurystatus=Injury status
 ls.player.speciality=Speciality
 ls.player.skill=Skill
-ls.player.career_goals=Career goals
-ls.player.team_goals=Goals for the team
-ls.player.hattricks=Hattricks
-ls.player.season_series_goals=Season series goals
-ls.player.season_cup_goals=Season cup goals
+PlayerOverview.AssistsCurrentTeam.long=Assists for the Team
+PlayerOverview.AssistsCurrentTeam.short=AT
+PlayerOverview.CareerAssists.long=Career Assists
+PlayerOverview.CareerAssists.short=CA
+PlayerOverview.CareerGoals.long=Career goals
+PlayerOverview.CareerGoals.short=GC
+PlayerOverview.GoalsTeam.long=Goals for the team
+PlayerOverview.GoalsTeam.short=GT
+PlayerOverview.Hattricks.long=Hattricks
+PlayerOverview.Hattricks.short=HT
+PlayerOverview.SeasonCupGoals.long=Season cup goals
+PlayerOverview.SeasonCupGoals.short=SCG
+PlayerOverview.SeasonSeriesGoals.long=Season series goals
+PlayerOverview.SeasonSeriesGoals.short=SSG
+YouthPlayerOverview.SeasonSeriesGoals.long=Season series goals
+YouthPlayerOverview.CareerGoals.long=Career goals
+
 ls.player.ratingend=Rating End Of Game
 ls.player.lastminutes=Minutes
 ls.player.lastlineup=Last match position
@@ -951,15 +963,6 @@ low=low
 high=high
 veryhigh=very high
 
-#Total Goals carrers
-TG=GT
-#Goals league
-TL=GL
-#Goals cup
-TP=GC
-#Hattricks
-HT=HT
-
 Matchbericht=Match report
 
 Reservebank_leeren=clear Reserve bank
@@ -1529,7 +1532,7 @@ bestOfWeek=Best of the Week
 worstOfWeek=Worst of the Week
 bestOfSeason=Best of the Season
 worstOfSeason=Worst of the Season
-        
+
 #HRF-Explorer
 Tab_HRF-Explorer=HRF-Explorer
 jan=January
