--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -603,14 +603,47 @@ verylow = min
 low = tief
 high = hoch
 veryhigh = max
-# Goals total
-TG = TG
-# Goals league
-TL = TL
-# Goals cup
-TP = TP
-# Goals friendly
-TF = TF
+
+# Assists for the Team
+PlayerOverview.AssistsCurrentTeam.long=Vorlagen für den Verein
+# Assists for the Team - short (AT)
+PlayerOverview.AssistsCurrentTeam.short=VV
+
+# Career Assists
+PlayerOverview.CareerAssists.long=Vorlagen (Karriere)
+# Career Assists - short (CA)
+PlayerOverview.CareerAssists.short=VK
+
+# Career Goals (former key: 'ls.player.career_goals')
+PlayerOverview.CareerGoals.long=Tore (Karriere)
+# Career Goals - short (former key: 'TG')
+PlayerOverview.CareerGoals.short=TK
+
+# Goals for the Team (former key: 'ls.player.team_goals')
+PlayerOverview.GoalsTeam.long=Tore für den Verein
+# Goals for the Team - short (former key: also 'TG' which was wrong)
+PlayerOverview.GoalsTeam.short=TV
+
+# Hattricks (former key: ls.player.hattricks)
+PlayerOverview.Hattricks.long=Hattricks
+# HT (former key: 'HT')
+PlayerOverview.Hattricks.short=HT
+
+# Season Cup Goals (former key: 'ls.player.season_cup_goals')
+PlayerOverview.SeasonCupGoals.long=Pokaltore in dieser Saison
+# SCG (former key: 'TP')
+PlayerOverview.SeasonCupGoals.short=PTS
+
+# Season Series Goals (former key: 'ls.player.season_series_goals')
+PlayerOverview.SeasonSeriesGoals.long=Ligatore in dieser Saison
+# SSG (former key: 'TL')
+PlayerOverview.SeasonSeriesGoals.short=LTS
+
+# Season Series Goals (former key: 'ls.player.season_series_goals')
+YouthPlayerOverview.SeasonSeriesGoals.long=Ligatore in dieser Saison
+# Career Goals (former key: 'ls.player.career_goals')
+YouthPlayerOverview.CareerGoals.long=Tore (Karriere)
+
 Nachkommastellen = Nachkommastellen
 Matchbericht = Spielbericht
 Reservebank_leeren = Reservebank leeren
@@ -2179,14 +2212,7 @@ sponsorsBonus = Sponsorenboni
 ls.module.player_analysis.stats = Statistik
 ls.module.player_analysis.goals_stats_disclaimer = Nur offizielle Spiele zählen
 ls.module.player_analysis.override_best_position = Überschreiben
-ls.player.career_goals = Karrieretore
-ls.player.team_goals = Tore für das Team
-ls.player.hattricks = Hattricks
-ls.player.season_series_goals = Ligatore diese Saison
-ls.player.season_cup_goals = Pokaltore diese Saison
 ls.player.position.no_override = Kein manuelles Überschreiben
-# Hattricks
-HT = HT
 # download status update
 ls.update_status.connection = Verbindung herstellen...
 ls.update_status.team_logo = Mannschaftswappen herunterladen...
