feat: #2254: Add Career Assists and Assists for the Team

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -119,11 +119,40 @@ ls.player.warningstatus=Warning status
 ls.player.injurystatus=Injury status
 ls.player.speciality=Speciality
 ls.player.skill=Skill
+# Assists for the Team
+ls.player.assists_current_team.long=Assists for the Team
+# Assists for the Team - short (AT)
+ls.player.assists_current_team.short=AT
+# Career Assists
+ls.player.career_assists.long=Career Assists
+# Career Assists - short (CA)
+ls.player.career_assists.short=CA
+
+# Career Goals
 ls.player.career_goals=Career goals
+# Career Goals - short (should be this key: 'ls.player.career_goals.short')
+TG=GC
+
+# Goals for the Team (should be this key: 'ls.player.goals_team.long')
 ls.player.team_goals=Goals for the team
+# Goals for the Team - short (should be this key: 'ls.player.goals_team.short'; former key: also 'TG' which was wrong)
+ls.player.team_goals.short=GT
+
+# Hattricks
 ls.player.hattricks=Hattricks
-ls.player.season_series_goals=Season series goals
+# Hattricks - short (should be this key: 'ls.player.hattricks.short')
+HT=HT
+
+# Season Cup Goals
 ls.player.season_cup_goals=Season cup goals
+# Season Cup Goals - short (should be this key: 'ls.player.season_cup_goals.short')
+TP=SCG
+
+# Season Series Goals
+ls.player.season_series_goals=Season series goals
+# Season Series Goals - short (should be this key: 'ls.player.season_series_goals.short')
+TL=SSG
+
 ls.player.ratingend=Rating End Of Game
 ls.player.lastminutes=Minutes
 ls.player.lastlineup=Last match position
@@ -951,15 +980,6 @@ verylow=very low
 low=low
 high=high
 veryhigh=very high
-
-#Total Goals carrers
-TG=GT
-#Goals league
-TL=GL
-#Goals cup
-TP=GC
-#Hattricks
-HT=HT
 
 Matchbericht=Match report
 
