--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -603,14 +603,42 @@ verylow = min
 low = tief
 high = hoch
 veryhigh = max
-# Goals total
-TG = TG
-# Goals league
-TL = TL
-# Goals cup
-TP = TP
-# Goals friendly
-TF = TF
+
+# Assists for the Team
+ls.player.assists_current_team.long=Vorlagen für den Verein
+# Assists for the Team - short (AT)
+ls.player.assists_current_team.short=VV
+
+# Career Assists
+ls.player.career_assists.long=Vorlagen (Karriere)
+# Career Assists - short (CA)
+ls.player.career_assists.short=VK
+
+# Career Goals
+ls.player.career_goals=Tore (Karriere)
+# Career Goals - short (should be this key: 'ls.player.career_goals.short')
+TG=TK
+
+# Goals for the Team (should be this key: 'ls.player.goals_team.long')
+ls.player.team_goals=Tore für den Verein
+# Goals for the Team - short (should be this key: 'ls.player.goals_team.short'; former key: also 'TG' which was wrong)
+ls.player.team_goals.short=TV
+
+# Hattricks
+ls.player.hattricks=Hattricks
+# Hattricks - short (should be this key: 'ls.player.hattricks.short')
+HT=HT
+
+# Season Cup Goals
+ls.player.season_cup_goals=Pokaltore in dieser Saison
+# Season Cup Goals - short (should be this key: 'ls.player.season_cup_goals.short')
+TP=PTS
+
+# Season Series Goals
+ls.player.season_series_goals=Ligatore in dieser Saison
+# Season Series Goals - short (should be this key: 'ls.player.season_series_goals.short')
+TL=LTS
+
 Nachkommastellen = Nachkommastellen
 Matchbericht = Spielbericht
 Reservebank_leeren = Reservebank leeren
@@ -2180,14 +2208,7 @@ sponsorsBonus = Sponsorenboni
 ls.module.player_analysis.stats = Statistik
 ls.module.player_analysis.goals_stats_disclaimer = Nur offizielle Spiele zählen
 ls.module.player_analysis.override_best_position = Überschreiben
-ls.player.career_goals = Karrieretore
-ls.player.team_goals = Tore für das Team
-ls.player.hattricks = Hattricks
-ls.player.season_series_goals = Ligatore diese Saison
-ls.player.season_cup_goals = Pokaltore diese Saison
 ls.player.position.no_override = Kein manuelles Überschreiben
-# Hattricks
-HT = HT
 # download status update
 ls.update_status.connection = Verbindung herstellen...
 ls.update_status.team_logo = Mannschaftswappen herunterladen...
