fix: Show translation of column 'Tactic' and 'Details'. Show tactics itself.

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -441,6 +441,7 @@ ls.team.tactic.attackinthemiddle=Attack in the Middle
 ls.team.tactic.attackonwings=Attack on wings
 ls.team.tactic.playcreatively=Play creatively
 ls.team.tactic.longshots=Long shots
+ls.match.event.details=Details
 
 #Values for Match tactics (shortened)
 ls.team.tactic_short.normal=NO
@@ -1529,7 +1530,7 @@ bestOfWeek=Best of the Week
 worstOfWeek=Worst of the Week
 bestOfSeason=Best of the Season
 worstOfSeason=Worst of the Season
-        
+
 #HRF-Explorer
 Tab_HRF-Explorer=HRF-Explorer
 jan=January
