--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -1110,6 +1110,7 @@ WEATHER_TECHNICAL_SUNNY = Ballzauberer in der Sonne
 WEITSCHUSS_TOR = Weitschuss
 ls.match.event.counter-attack = Konter
 ls.match.event.longshot = Weitschuss
+ls.match.event.details=Details
 # filters
 specialEvents.filter.matchTypes.title = Spielarten
 specialEvents.filter.matchTypes.friendly = Freundschaftsspiele
