fix: Tools/Arena Sizer: Removed superfluous space for the 'Spectators' in braces at the end.

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -822,7 +822,7 @@ Verschiedenes=Misc
 DieseWoche=This week
 Vorwoche=Previous week
 Ausgaben=Expense
-Zuschauer=Match takings
+Zuschauer=Spectators
 Stadion=Arena
 Sponsoren=Sponsors
 sponsorsBonus=Sponsors bonuses
