--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -484,7 +484,7 @@ DieseWoche = Diese Woche
 Vorwoche = Vorwoche
 Ausgaben = Ausgaben
 # Fuzzy
-Zuschauer = Zuschauereinnahmen
+Zuschauer=Zuschauer
 Stadion = Stadion
 Sponsoren = Sponsoren
 Spielergehaelter = Spielergehälter
