fix: Change English translation of 'TeamAnalyzer' to 'Team Analyzer'

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -1436,7 +1436,7 @@ SettingPanel.Playerinformations=Player information
 SettingPanel.ShowUnavailable=Show Unavailable
 SettingPanel.TacticDetail=Show Details
 SpecialEvent=SE
-TeamAnalyzer=TeamAnalyzer
+TeamAnalyzer=Team Analyzer
 TeamLineupBuilder.Unknown=Unknown
 TeamPanel.TeamMessage=Select the matches and click Analyze
 TournamentMatch=Tournament match
