[FEATURE]: #2409: Tools/Arena Sizer: Image of Stadium

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -2479,6 +2479,7 @@ ArenaInfoPanel.available=Available:
 ArenaInfoPanel.construction_in_progress=Construction in progress
 ArenaInfoPanel.current=Current
 ArenaInfoPanel.expansion=Expansion
+ArenaInfoPanel.stadium_expansion=Stadium expansion
 ArenaInfoPanel.change_in_percent=Change in %
 ArenaInfoPanel.future=Future
 ArenaInfoPanel.finished_in_n_days_format=Finished in %s days.
