[FEATURE]: #2409: Tools/Arena Sizer: Image of Stadium

--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -2300,6 +2300,7 @@ ArenaInfoPanel.available=Verfügbar:
 ArenaInfoPanel.construction_in_progress=im Umbau
 ArenaInfoPanel.current=Aktuell
 ArenaInfoPanel.expansion=Umbau
+ArenaInfoPanel.stadium_expansion=Stadionausbau
 ArenaInfoPanel.change_in_percent=Veränderung in %
 ArenaInfoPanel.future=Zukunft
 ArenaInfoPanel.finished_in_n_days_format=Fertigstellung in %s Tagen.
