[BUG] #2418: Add the missing player categories 11, 12 and 13

--- a/src/main/resources/language/English.properties
+++ b/src/main/resources/language/English.properties
@@ -333,6 +333,9 @@ ls.player.category.Substitute=Substitute
 ls.player.category.Reserve=Reserve
 ls.player.category.Extra1=Extra1
 ls.player.category.Extra2=Extra2
+ls.player.category.Trainee1=Trainee1
+ls.player.category.Trainee2=Trainee2
+ls.player.category.CoachProspect=Coach Prospect
 ls.player.category.undefined=Undefined
 
 ls.player.ratemyacademyscore=RMA
