--- a/src/main/resources/language/German.properties
+++ b/src/main/resources/language/German.properties
@@ -2263,17 +2263,21 @@ ls.update_status.fixtures = Herunterladen der Spielpläne ...
 ls.update_status.calc_subskills = Berechnen der Subskills ...
 ls.player.statement = Statement
 ls.player.ownernotes = Notizen
-ls.player.category = Kategorie
-ls.player.category.Keeper = Torwart
-ls.player.category.WingBack = Außen-Verteidiger
-ls.player.category.CentralDefender = Innen-Verteidiger
-ls.player.category.Winger = Flügelspieler
-ls.player.category.InnerMidfield = zentraler Mittelfeldspieler
-ls.player.category.Forward = Stürmer
-ls.player.category.Substitute = Ersatzspieler
-ls.player.category.Reserve = Perspektivspieler
-ls.player.category.Extra1 = Bankdrücker
-ls.player.category.Extra2 = Trainer
+ls.player.category=Kategorie
+ls.player.category.Keeper=Torwart
+ls.player.category.WingBack=Außenverteidiger
+ls.player.category.CentralDefender=Innenverteidiger
+ls.player.category.Winger=Flügelspieler
+ls.player.category.InnerMidfield=zentraler Mittelfeldspieler
+ls.player.category.Forward=Stürmer
+ls.player.category.Substitute=Ersatzspieler
+ls.player.category.Reserve=Perspektivspieler
+ls.player.category.Extra1=Extra 1
+ls.player.category.Extra2=Extra 2
+ls.player.category.Trainee1=Trainingsgruppe 1
+ls.player.category.Trainee2=Trainingsgruppe 2
+ls.player.category.CoachProspect=Trainerkandidat
+ls.player.category.undefined=Unbestimmt
 ls.player.shirtnumber.short = \#
 ls.player.shirtnumber = Trikotnummer
 ls.training.week = Trainingswoche
